# routes/medication-api.js
@@ -78,18 +78,24 @@ module.exports = (app) => {
                     res.status(400).json({ status: false, message: "supplierCode parameter is missing" });
                     return;
                 }
+                if (!req.body.supplierName) {
+                    res.status(400).json({ status: false, message: "supplierCode parameter is missing" });
+                    return;
+                }
                 if (!req.body.isoCountryCode) {
                     res.status(400).json({ status: false, message: "isoCountryCode parameter is missing" });
                     return;
                 }
                 // File path where file is saved
                 var filePath = path.resolve(DIR + req.file.filename);
-                const { supplierCode, version, userId, isoCountryCode } = req.body
+                const { supplierCode, version, userId, isoCountryCode,
+                    supplierName
+                } = req.body
                 const fileData = {
                     fileName: req.file.filename,
                     userId: new ObjectID(userId),
                     supplierCode: supplierCode,
-                    // supplierId:supplierId,
+                    supplierName: supplierName,
                     isoCountryCode: isoCountryCode,
                     status: false,
                     successedRecordsCount: 0,
@@ -103,7 +109,9 @@ module.exports = (app) => {
                     //FILE DATA INSERT CODE WILL BE HERE
                     if (req.file.mimetype == "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet") {
                         ////// THIS IS FOR XLSX FILE 
-                        medicationModule.xlsxUpload(isoCountryCode, userId, version, supplierCode, filePath, correctEntryCount, invalidDatas, duplicateEntryCount,
+                        medicationModule.xlsxUpload(
+                            supplierName,
+                            isoCountryCode, userId, version, supplierCode, filePath, correctEntryCount, invalidDatas, duplicateEntryCount,
                             function (error, totalEntryCount, correctEntryCount, invalidDatas, duplicateEntryCount) {
                                 // IF FILE HAS NO DATA
                                 if (totalEntryCount == 0) {
@@ -191,7 +199,9 @@ module.exports = (app) => {
                     }
                     else {
                         ////// THIS IS FOR CSV FILE 
-                        medicationModule.csvUpload(isoCountryCode, userId, version, supplierCode, filePath, totalEntryCount, correctEntryCount, invalidDatas, duplicateEntryCount,
+                        medicationModule.csvUpload(
+                            supplierName,
+                            isoCountryCode, userId, version, supplierCode, filePath, totalEntryCount, correctEntryCount, invalidDatas, duplicateEntryCount,
                             function (error, totalEntryCount, correctEntryCount, invalidDatas, duplicateEntryCount) {
                                 // IF FILE HAS NO DATA
                                 if (totalEntryCount == 0) {
@@ -284,8 +294,8 @@ module.exports = (app) => {
                     return res.status(500).json({ message: 'Error while uploading file', error: err });
                 });
             }
-            catch (er) {
-                res.status(500).json({ status: false, message: er });
+            catch (err) {
+                res.status(500).json({ status: false, message: err });
             }
         });
     //END OF API FOR MEDICATION DETAILS EXCELSHEET IMPORT
